# cc.me

./: .envrc  .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  go.mod  go.sum  main.go  main_test.go  process-compose.yaml  smtpd.conf
ccme/: client.go  client_test.go  decrypt.go  decrypt_test.go  keys.go  keys_test.go  seal_test.go  sign.go  sign_test.go  urls.go  urls_test.go
client/: PROTOCOL.md  README.md  deno.json  forward.js  index.d.ts  index.js  package.json
client/js/: deno.json  forward.js  forward_e2e_test.js  forward_test.js  index.d.ts  index.js  index_test.js  package.json  test_helpers.js
client/python/: README.md  pyproject.toml
client/python/cc_me/: __init__.py  forward.py
client/python/tests/: helpers.py  test_b64u.py  test_client_http.py  test_decrypt.py  test_forward_cli.py  test_keys.py  test_signing.py  test_urls.py
client/rust/: Cargo.toml  README.md
client/rust/src/: lib.rs  main.rs
client/rust/tests/: cli_process.rs  client_http.rs
client/rust/tests/common/: mod.rs
docs/: fonts.html  hi.html  http.html  icon.html  index.html  lib.html  pow.html  pow.js  shot.html  social-card.html  styles.css
pow/: README.md  build.ninja  configure  pow.c  pow.mjs  pow.swift
src/: main.rs  paste_create.html  paste_view.html
