[package]
name = "cc-me"
version = "0.2.0"
edition = "2024"
license = "MIT"

[dependencies]
axum = "0.8.9"
base64 = "0.22.1"
bytes = "1.10.1"
crypto_box = { version = "0.10.0-pre.0", features = ["seal", "std"] }
curve25519-dalek = "4"
ed25519-dalek = "2.2.0"
sha2 = "0.10"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", default-features = false, features = ["macros", "postgres", "runtime-tokio-rustls"] }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "signal"] }
tower-http = { version = "0.6.6", features = ["cors"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
url = "2.5.4"
