[package]
name = "cc-me"
version = "0.2.0"
edition = "2024"
license = "MIT"
default-run = "cc-me"

[dependencies]
axum = "0.8.9"
base64 = "0.22.1"
bytes = "1.10.1"
crypto_box = { version = "0.10.0-pre.0", features = ["seal", "std"] }
curve25519-dalek = "4"
ed25519-dalek = "2.2.0"
sha2 = "0.10"
percent-encoding = "2.3"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
scraper = "0.20"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", default-features = false, features = ["macros", "postgres", "runtime-tokio-rustls", "uuid"] }
time = { version = "0.3", features = ["formatting"] }
uuid = { version = "1", features = ["v4", "serde"] }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "signal"] }
tower-http = { version = "0.6.6", features = ["cors"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
url = "2.5.4"

[dev-dependencies]
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
